--- a/package.json
+++ b/package.json
@@ -17,9 +17,12 @@
     "@fortawesome/react-native-fontawesome": "^0.3.2",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
+    "firebase": "^12.7.0",
     "json-server": "^1.0.0-beta.3",
     "react": "18.3.1",
     "react-native": "0.75.4",
+    "react-native-geolocation-service": "^5.3.1",
+    "react-native-maps": "^1.10.0",
     "react-native-safe-area-context": "^4.12.0",
     "react-native-screens": "^3.35.0",
     "react-native-svg": "^15.10.1",
